# portfolio-backend

./: .env.example  .gitignore  ADMIN_DATA.md  Dockerfile  Procfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  railway.toml  requirements.txt
portbackend/: asgi.py  settings.py  urls.py  wsgi.py
portfolio_api/: admin.py  models.py  serializers.py  urls.py  views.py
portfolio_api/migrations/: 0001_initial.py  0002_portfolio.py  0003_contact.py  0004_delete_portfolio.py  0005_profile.py  0006_testimonial_alter_contact_options_project_github_url_and_more.py  0007_certification.py  0008_seed_data.py  0009_backfill_seed_data.py  0010_merge_0008_seed_data_0009_backfill_seed_data.py  0011_profile_profile_picture_url.py
